Fix lineSpacing bug when set via fontString

--- a/demo/css/fontface-declarations.css
+++ b/demo/css/fontface-declarations.css
@@ -151,8 +151,8 @@ Noto Sans Thai Looped - is an unmodulated (“sans serif”) design in the more 
 โดยที่การยอมรับศักดิ์ศรีแต่กำเนิด และสิทธิที่เท่าเทียมกันและที่ไม่อาจเพิกถอนได้ของสมาชิกทั้งมวลแห่งครอบครัวมนุษยชาติ เป็นพื้นฐานแห่งอิสรภาพ ความยุติธรรม และสันติภาพในโลก การไม่นำพาและการหมิ่นในคุณค่าของสิทธิมนุษยชน ยังผลให้มีการกระทำอันป่าเถื่อน ซึ่งเป็นการขัดอย่างร้ายแรงต่อมโนธรรมของมนุษยชาติ และการมาถึงของโลกที่ได้มีการประกาศให้ความมีอิสรภาพในการพูดและความเชื่อ และอิสรภาพจากความหวาดกลัวและความต้องการของมนุษย์ เป็นความปรารถนาสูงสุดของประชาชนทั่วไป โดยที่เป็นการจำเป็นที่สิทธิมนุษยชนควรได้รับความคุ้มครองโดยหลักนิติธรรม ถ้าจะไม่บังคับให้คนต้องหันเข้าหาการลุกขึ้นต่อต้านทรราชและการกดขี่เป็นวิถีทางสุดท้าย โดยที่เป็นการจำเป็นที่จะส่งเสริมพัฒนาการแห่งความสัมพันธ์ฉันมิตรระหว่างชาติต่างๆ
 */
 @font-face {
-  font-family: "Noto Thai Looped Sans";
-  src: url("../fonts/NotoSansThaiLooped-Regular.ttf") format("opentype");
+  font-family: "Noto Thai Sans";
+  src: url("../fonts/NotoSansThai-Regular.ttf") format("opentype");
 }
 
 /*
